# RRLpy

./: .pre-commit-config.yaml  pyproject.toml  requirements_dev.txt
.github/workflows/: python-ci.yml  python-package.yml  release.yml
examples/: fit_lines.ipynb  fit_lines_two_velocities.ipynb  fit_spectra_emcee.ipynb
src/rrlpy/: __init__.py
src/rrlpy/continuum/: __init__.py  core.py
src/rrlpy/departure/: bnbeta.py
src/rrlpy/departure/tests/: test_bnbeta.py
src/rrlpy/freq/: core.py
src/rrlpy/linewidth/: core.py
src/rrlpy/rrl/: constants.py  core.py  rrl.py
src/rrlpy/rrl/tests/: test_core.py  test_rrl.py
src/rrlpy/synth/: layers.py
src/rrlpy/synth/tests/: test_layers.py
src/rrlpy/utils/: core.py
tests/: __init__.py
