[project]
name = "rrlpy"
authors = [
    {name = "Pedro Salas", email = "psalas@nrao.edu"},
    {name = "astrofle", email = "psalas@nrao.edu"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)"]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "astropy",
]
description = "Radio Recombination Lines in Python"


[tool.pdm]
version = { source = "file", path = "src/rrlpy/__version__.py" }

[project.urls]
homepage = "https://github.com/astrofle/RRLpy"
repository = "https://github.com/astrofle/RRLpy"

#[project.scripts]
#rrlpy = "rrlpy.cli:main"

[tool]

[tool.black]
preview = true
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"src/rrlpy/rrl/constants.py" = ["F401"]

[tool.pyright]
reportImplicitStringConcatenation = false

[tool.isort]
# See: https://pycqa.github.io/isort/docs/configuration/options/#example-pyprojecttoml
profile = "black"
combine_as_imports = true
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyprojectx]
pdm = "pdm==2.8.2"

# commonly used tools
#black = "black"
#isort = "isort"
#pylint = "pylint"
#pre-commit = "pre-commit"
#jupyter = ["jupyter", "."]

[tool.pyprojectx.aliases]
install = "pdm install"
run = "pdm run"
outdated = "pdm update --outdated"
test = "pdm run pytest"

# example aliases
#clean = "rm -rf .venv .pytest_cache dist"
#clean-all = "pw@ clean && rm -rf .pyprojectx"
#black = "black src tests"
#isort = "isort src tests"
#check-pylint = "pylint src tests"
#check-black = "black src tests --check"
#check = "pw@ check-black && pw@ check-pylint && pw@ test"
#build = "pw@ install && pw@ check && pw@ pdm build"
#notebook = "jupyter notebook -y"

[tool.pyprojectx.os.win.aliases]
# example os specific aliases
#clean = "rmdir /s/q .venv .pytest_cache dist"
#clean-all = "pw@ clean & rmdir /s/q .pyprojectx"
