[project]
name = "rrlpy"
authors = [
    {name = "Pedro Salas", email = "psalas@nrao.edu"},
    {name = "astrofle", email = "psalas@nrao.edu"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)"]
dynamic = ["version"]
requires-python = ">=3.5"
dependencies = [
    "astropy",
    "scipy",
    "numpy"
]
description = "Radio Recombination Lines in Python"

[dependency-groups]
dev = ["pytest",
]

[tool.hatch.version]
path = "src/rrlpy/__init__.py"

[project.urls]
homepage = "https://github.com/astrofle/RRLpy"
repository = "https://github.com/astrofle/RRLpy"

[tool]

[tool.black]
preview = true
line-length = 120

[tool.ruff]
select = [
  "F",    # https://beta.ruff.rs/docs/rules/#pyflakes-f
  "E",    # https://beta.ruff.rs/docs/rules/#error-e
  "W",    # https://beta.ruff.rs/docs/rules/#warning-w
  "B",    # https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
  "I",    # https://beta.ruff.rs/docs/rules/#isort-i
  "RUF",  # https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
]
fixable = ["ALL"]
unfixable = ["B"]
ignore = [
  "E741",  # ambiguous-variable-name
  "B905"
]
line-length = 120
src = ["src"]

[tool.ruff.per-file-ignores]
"src/rrlpy/rrl/constants.py" = ["F401"]
# Ignore  in all `__init__.py` files
"__init__.py" = ["E402", "F405", "F403"]

[tool.pyright]
reportImplicitStringConcatenation = false

[tool.isort]
# See: https://pycqa.github.io/isort/docs/configuration/options/#example-pyprojecttoml
profile = "black"
combine_as_imports = true
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
